--- a/style.css
+++ b/style.css
@@ -5172,6 +5172,210 @@ display: none;
   object-fit: cover;
 }
 
+.single-product__price-block {
+  display: flex;
+  align-items: start;
+  flex-wrap: wrap;
+  padding: 22px 0 34px 0;
+  border-bottom: 1px solid #d1d2d4;
+  margin-bottom: 34px;
+}
+
+.single-product__item {
+  padding: 0;
+  border-bottom: none;
+  margin-right: 41px;
+}
+
+.single-product__price-btn {
+  cursor: pointer;
+  margin: 0 !important;
+}
+
+.product__quantity {
+  margin-right: 41px;
+}
+.quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 130px;
+  height: 42px;
+  padding: 0 3px;
+  border: 1px solid #BABABA;
+  /* border-radius: 35px; */
+}
+.quantity__button {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 30px;
+  flex: 0 0 30px;
+  position: relative;
+  cursor: pointer;
+}
+.quantity__button::before, .quantity__button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  margin: 0px 0px 0px -4.5px;
+  background-color: #161615;
+  width: 9px;
+  height: 1px;
+}
+.quantity__input {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+.quantity__input input {
+  width: 100%;
+  height: 100%;
+  color: #161615;
+  text-align: center;
+  outline: none;
+  border: none;
+}
+.quantity__button_plus::before {
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+
+/* Оформление корзины */
+.bascet_page_table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 30px 0 0 0; }
+.bascet_page_table thead {
+  width: 100%; }
+.bascet_page_table td,
+.bascet_page_table th {
+  text-align: left;
+  padding: 8px 0; }
+.bascet_page_table img {
+  width: 60px;
+  height: auto; }
+.bascet_page_table input {
+  width: 50px;
+  height: 30px;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  padding: 0 5px; }
+.bascet_page_table .b_tov_name {
+  color: #1dc17b;
+  text-transform: uppercase;
+  margin-bottom: 10px; }
+.bascet_page_table .b_tov_sku {
+  font-size: 14px; }
+.bascet_page_table tbody td {
+  border-bottom: solid 1px #f5f5f5; }
+.bascet_page_table tfoot td,
+.bascet_page_table th {
+  border-bottom: 1px solid #1dc17b; }
+.bascet_page_table .prev {
+  width: 10%; }
+.bascet_page_table .name {
+  width: 60%; }
+.bascet_page_table .count {
+  width: 15%; }
+.bascet_page_table .price {
+  width: 15%;
+  text-align: right; }
+.bascet_form {
+  width: 50%;
+  margin-bottom: 20px; }
+.bascet_form h2 {
+  font-size: 26px;
+  margin: 1em 0; }
+.form-line .form-help-text-main {
+  font-size: 12px;}
+.form-line .form-help-text {
+  font-size: 12px;
+  /* color: #e0e1e3; */
+  color: #858484; }
+.bascet_form .form-line {
+  margin-bottom: 20px; }
+
+@media (max-width: 600px) {
+  .bascet_page_table .name {
+    padding-left: 10px; } }
+
+@media (max-width: 450px) {
+  .bascet_page_table img {
+    width: 45px; }
+  .bascet_page_table .b_tov_sku,
+  .bascet_page_table {
+    font-size: 12px; }
+  .bascet_form {
+    width: 100%; } }
+
+.no_feild {
+  width: 100%;
+  background-color: #1dc17b;
+  text-align: center;
+  color: white;
+  padding: 10px 2%;
+  border-radius: 10px;
+  margin-top: 20px; }
+.form-line label,
+.select-prod__callback label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer; }
+input[type="checkbox"],
+.select-prod__callback input {
+  margin-right: 11px;
+  cursor: pointer; }
+.bascet_empty_string {
+  width: 100%;
+  margin-bottom: 20px;
+  display: inline-block; }
+.bascet-form__textarea,
+.bascet-form__input {
+  width: 100%;
+  height: 45px;
+  padding: 0px 10px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  min-width: 0 !important;
+  border: 1px solid #1dc17b;
+  display: inline-block; }
+.bascet-form__textarea {
+  height: 100%;
+  margin: 0; }
+.bascet-form__btn {
+  width: 180px;
+  height: 40px;
+  background: #65B965;
+  border-radius: 5px;
+  color: #fff; }
+/* Оформление корзины End */
+
+/* Убираем стрелки у цифрового инпута */
+.quantity__input input::-webkit-outer-spin-button,
+.quantity__input input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
