--- a/style.css
+++ b/style.css
@@ -5149,15 +5149,17 @@ display: none;
   padding: 0;
   border-bottom: none;
   margin-right: 41px;
+  margin-bottom: 10px;
 }
 
 .single-product__price-btn {
   cursor: pointer;
-  margin: 0 !important;
+  margin: 0 0 10px 0 !important;
 }
 
 .product__quantity {
   margin-right: 41px;
+  margin-bottom: 10px;
 }
 .quantity {
   display: -webkit-box;
@@ -5229,7 +5231,7 @@ display: none;
   border-radius: 3px;
   padding: 0 5px; }
 .bascet_page_table .b_tov_name {
-  color: #1dc17b;
+  color: #000;
   text-transform: uppercase;
   margin-bottom: 10px; }
 .bascet_page_table .b_tov_sku {
@@ -5238,7 +5240,7 @@ display: none;
   border-bottom: solid 1px #f5f5f5; }
 .bascet_page_table tfoot td,
 .bascet_page_table th {
-  border-bottom: 1px solid #1dc17b; }
+  border-bottom: 1px solid #BABABA; }
 .bascet_page_table .prev {
   width: 10%; }
 .bascet_page_table .name {
@@ -5278,11 +5280,11 @@ display: none;
 
 .no_feild {
   width: 100%;
-  background-color: #1dc17b;
+  background-color: #fed519;
   text-align: center;
-  color: white;
   padding: 10px 2%;
-  border-radius: 10px;
+  font-weight: 600;
+  /* border-radius: 10px; */
   margin-top: 20px; }
 .form-line label,
 .select-prod__callback label {
@@ -5306,17 +5308,19 @@ input[type="checkbox"],
   margin-bottom: 15px;
   border-radius: 5px;
   min-width: 0 !important;
-  border: 1px solid #1dc17b;
+  border: 1px solid #BABABA;
   display: inline-block; }
 .bascet-form__textarea {
   height: 100%;
+  padding: 15px;
   margin: 0; }
 .bascet-form__btn {
-  width: 180px;
-  height: 40px;
-  background: #65B965;
-  border-radius: 5px;
-  color: #fff; }
+  background-color: #fed519;
+  padding: 10px 40px;
+  border: 1px solid #fed519;
+  font-weight: 600;
+  font-size: 18px; 
+  cursor: pointer;}
 /* Оформление корзины End */
 
 /* Убираем стрелки у цифрового инпута */
@@ -5612,6 +5616,8 @@ input[type="checkbox"],
     margin-right: 0px;
     margin-bottom: 20px;
   }
+  .single-product__photo {
+    width: 100%;}
 }
 
 @media only screen and (max-width:800px) {
@@ -5619,6 +5625,12 @@ input[type="checkbox"],
     margin-right: 20px;
   }
 }
+
+@media only screen and (max-width:768px) {
+  .bascet_form {
+    width: 100%;}
+}
+
 @media only screen and (max-width:750px) {
   .header-top .container {
     -webkit-flex-direction: column;
@@ -5886,6 +5898,16 @@ input[type="checkbox"],
 @media only screen and (max-width:414px) {
   .bascket-icon {
     margin-right: 20px;}
+  .single-product__item {
+    margin-right: 0;
+    width: 100%;}
+  .product__quantity {
+    width: 100%;
+    margin-right: 0;}
+  .single-product__content .more-link {
+    width: 100%;}
+  .bascet-form__btn {
+    width: 100%;}
 }
 
 @media only screen and (max-width:400px) {
